# azure-function-durable

./: README.md  azure-function-durable.csproj  local.settings.json.example
Orchestrations/Activities/: BlobJobActivity1.cs
Orchestrations/BlobJob/: BlobJobOrchestrator.cs
Tirggers/: IoTHub_Trigger.cs  SQLTrigger.cs
Tirggers/Models/: TodoItem.cs
dotnet/Orchestrations/BlobJob/: BlobJobOrchestrator.cs
dotnet/Properties/: launchSettings.json
dotnet/Tirggers/: IoTHub_Trigger.cs  SQLTrigger.cs
python/: .env.example  .gitignore  function_app.py  pyproject.toml
python/Orchestrations/Activities/: __init__.py  blob_job_activity1.py
python/Orchestrations/BlobJob/: __init__.py  blob_job_orchestrator.py
python/Triggers/: iothub_trigger.py  sql_trigger.py
python/Triggers/Models/: __init__.py  todo_item.py
python/examples/: README.md  ai_agent_workflow.py
